# hack-commons

./: .gitignore  README.md  SUBMISSION.md  deploy.md  docs-reference.md  hackathon.md  plan.md  sponsors.md
backend/: .env.example  pyproject.toml
backend/src/: main.py
backend/src/agents/: analyst.py  base.py  executor.py  frontier_tower.py  orchestrator.py  researcher.py
backend/src/api/: routes.py  x402_routes.py
backend/src/core/: config.py  events.py  solana_client.py  x402.py
backend/src/integrations/: elevenlabs.py  human_passport.py  kalibr_router.py  unbrowse.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/agents/: route.ts
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/chat/voice/: route.ts
frontend/src/app/api/demo/x402-flow/: route.ts
frontend/src/app/api/events/: route.ts
frontend/src/app/api/tasks/: route.ts
frontend/src/app/api/voice/status/: route.ts
frontend/src/app/api/wallets/: route.ts
frontend/src/app/api/wallets/init/: route.ts
frontend/src/app/api/x402/prices/: route.ts
frontend/src/app/components/: ChatPanel.tsx
frontend/src/lib/: config.ts  events.ts  llm.ts  solana-client.ts  x402.ts
frontend/src/lib/agents/: analyst.ts  base.ts  executor.ts  frontier-tower.ts  orchestrator.ts  registry.ts  researcher.ts  types.ts
frontend/src/lib/integrations/: alkahest.ts  elevenlabs.ts  human-passport.ts  unbrowse.ts
solana/: package.json  pnpm-lock.yaml
solana/src/: register-agents.ts
(+1 files in other folders)
