[project]
name = "agent-commerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "openai>=2.28.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "solana>=0.36.11",
    "solders>=0.27.1",
    "sse-starlette>=3.3.2",
    "uvicorn>=0.41.0",
]
